--- a/CSS/colorTypes.css
+++ b/CSS/colorTypes.css
@@ -1,5 +1,5 @@
 h1{
     color: aqua;                /* Color */
     color: rgb(15, 230, 230);   /* RGB */
-    color: #ffff00;             /* Hexadecimal */
+    color: #00ffea;             /* Hexadecimal */
 }
