--- a/CSSintro/basicCSS.css
+++ b/CSSintro/basicCSS.css
@@ -1,27 +1,23 @@
-h1{
-    text-align: center;
-    font-weight: normal;
-    text-decoration: blue underline wavy;
-    font-size: 50px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-
-}
+h1,
 h2 {
-    color: rgb(99, 195, 164);
-    background-color: rgb(0, 145, 255);
-    
-    }
-button  {
-    color: blueviolet;
-    background-color: cyan;
-    letter-spacing: 20px;
-    text-transform: uppercase;
+  text-align: center;
+  font-weight: normal;
+  text-decoration: blue underline wavy;
+  font-size: 50px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
-p{
-    color: fuchsia;
-    background-color: rgb(0, 255, 157);
-    line-height: 5;
+button {
+  color: blueviolet;
+  background-color: cyan;
+  letter-spacing: 20px;
+  text-transform: uppercase;
 }
+p {
+  color: fuchsia;
+  background-color: rgb(0, 255, 157);
+  line-height: 5;
+}
+/* makes everything that description */
 * {
-    background-color: red;
+  background-color: red;
 }
