--- a/CSS/boxModel.css
+++ b/CSS/boxModel.css
@@ -1,9 +1,30 @@
 div {
-	width: 500px;
+	width: 300px;
 	height: 200px;
 	background-color: cyan;
+    border-radius: 5%; /*makes the corners rounded*/ 
 }
 
 h1{
     background-color: palevioletred;
+}
+
+#one { /* id "one*/
+background-color: palevioletred;
+border-width: 5px;
+border-color: black;
+border-style: solid;
+box-sizing: border-box;
+}
+#two { /* id "one*/
+background-color: rgb(112, 187, 216);
+border-width: 5px;
+border-color: black;
+border-style: dashed;
+border-left-color: red;
+border-left-width: 5px;
+}
+#three { /* id "one*/
+background-color: palevioletred;
+border: 4px solid blue;             /* This one is much shorter and quicker*/
 }
