--- a/CSS/boxModel.css
+++ b/CSS/boxModel.css
@@ -28,3 +28,14 @@ border-left-width: 5px;
 background-color: palevioletred;
 border: 4px solid blue;             /* This one is much shorter and quicker*/
 }
+
+/* Padding is the spacing on the inside of the button */
+/* Margin is the spacing on the outside of the button */
+button{
+    background-color: aqua;
+    margin-left: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 20px; /* all four sides */
+    /* padding: 0px 20px            (Vertrical, Horizontal) */
+}
