--- a/CSS/units.css
+++ b/CSS/units.css
@@ -1,17 +1,21 @@
 section {
-    background-color: aquamarine;
-    width: 800px;
-    height: 800px;
+	background-color: aquamarine;
+	width: 800px;
+	height: 800px;
 }
 
 div {
-    background-color: blueviolet;
-    width: 50%; /*50% of the parent element(section)*/
-    height: 50%;
+	background-color: blueviolet;
+	width: 50%; /*50% of the parent element(section)*/
+	height: 50%;
 }
 
-h1{
-    font-size: 40px;
-    border: 5px solid red;
-    line-height: 80px;
+h1 {
+	font-size: 40px;
+	border: 5px solid red;
+	line-height: 80px;
+}
+
+h2{
+    font-size: 2em;
 }
