--- a/CSS/colorTypes.css
+++ b/CSS/colorTypes.css
@@ -1,5 +1,11 @@
 h1 {
-  color: aqua; /* Color */
-  color: rgb(15, 230, 230); /* RGB */
-  color: #00ffea; /* Hexadecimal */
+	color: aqua; /* Color */
+	color: rgb(15, 230, 230); /* RGB */
+	color: #00ffea; /* Hexadecimal */
+	color: rgb(15, 230, 230, 0.5); /* RGBA (0-1 levels of transparency */
+}
+
+/* Only works with the ID "opacity */
+#opacity {
+	opacity: 0.5; /*0-1 levels of opacity for the entire element */
 }
