--- a/html_css_basics/basicCSS/basicCSS.css
+++ b/html_css_basics/basicCSS/basicCSS.css
@@ -13,11 +13,11 @@ button {
   text-transform: uppercase;
 }
 p {
-  color: fuchsia;
-  background-color: rgb(0, 255, 157);
+  color: rgb(255, 179, 0);
+  background-color: rgb(0, 145, 255);
   line-height: 5;
 }
 /* makes everything that description */
 * {
-  background-color: rgb(238, 0, 255);
+  background-color: rgb(255, 174, 0);
 }
